# rust-todo

./: .env.example  Cargo.toml  Dockerfile  compose.yaml  entrypoint.sh  generate.sh
andorra/: config.json
routing/: Cargo.toml
routing/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
